2008-07-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (prune_dataticks): Fix double-free error.

2008-07-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/eval.c src/mouse.c src/plot2d.c src/plot3d.c src/term.c: Added
	variables GPVAL_{S}PLOT, GPVAL_VIEW_{MAP|ROT_X|ROT_Z|SCALE|ZSCALE},
	GPVAL_MULTIPLOT, GPVAL_LAST_PLOT, GPVAL_TERMINALS.

	* src/term_api.h src/term.c: New function get_terminals_names().

2008-07-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.c: Remove unused variable.

	* src/graph3d.c: Ignore 'set size ratio' in 3D plots unless the view
	mode is 'set view map'.  This brings the behavior in line with the docs.

	* src/util3d.c (map3d_xy) src/util3d.h src/graph3d.c:
	Change coordinates in map3d_xy() to (int) rather than (unsigned int).
	This makes it parallel to the 2D routine and also saves code.

2008-07-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/eval.h src/eval.c: New routines fill_gpval_integer,
	fill_gpval_float, fill_gpval_complex. To be used for more readable
	setting of GPVAL_ variables.

2008-06-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff docs/README.ja:
	Sync Japanese documentation to gnuplot.doc rev 1.517

2008-06-26  Philipp K Janert  <janert@ieee.org>

	* src/interpolc.c (eval_kdensity do_kdensity): Follow code conventions.
	
2008-06-26  Peter Rosin  <pekberg@users.sourceforge.net>

	* term/ggi.trm: uint32 -> unit32_t
	Allows to build with current libggi.

2008-06-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Check for term->filled_polygon() before trying to
	call it.  (fixes segfault triggered by ggi terminal driver).

2008-06-26  Philipp K Janert  <janert@ieee.org>
	
	* src/gp_types.h src/interpol.c src/plot2d.c src/tables.c 
	docs/gnuplot.doc: Changes for new smoothing algorithm for 
	smooth histograms using Gaussian kernel density estimates.
	
2008-06-24  Ethan Merritt  <merritt@u.washington.edu>
